--- a/src/index.scss
+++ b/src/index.scss
@@ -1205,12 +1205,14 @@ body{
           position: sticky;
           top:0;
           display: flex;
-        align-items: center;
-        justify-content: center;
-        inset: 0;
+          align-items: center;
+          justify-content: center;
+          inset: 0;
+          background-color: white;
           .demotion_tweet_div_sticky{
             height: 100vh;
-            width: 50vw;
+            width: 45vw;
+            background-color: #1DA1F2;
             .tweets_div{
               position: sticky;
               top: 0;
@@ -1241,13 +1243,13 @@ body{
           align-items: center;
           justify-content: center;
           inset: 0;
+          background-color: white;
+          color: rgb(108, 108, 108);
           .demotion_text_div_sticky{
             height: 70vh;
             width: 40vw;     
             font-size: 2rem;  
-            display: flex;
-            align-items: center;
-            justify-content: center;
+
             
           }
           
@@ -1257,8 +1259,16 @@ body{
     .demotion_section{
       height: 100vh;
       width: 100vw;
+      background-color: white;
+      color: rgb(108, 108, 108);
       .padding{
         height: 20vh
+      }
+      .demotionText{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 2rem;
       }
     }
     .outro_section{
