--- a/src/index.scss
+++ b/src/index.scss
@@ -1209,6 +1209,7 @@ body{
           margin-right: 10%;
           font-size: 2.5vw;
           line-height: 3rem;
+          text-align: center;
           .non_changing{
             padding-left: 4rem;
             padding-right: 4rem;
