tweet svg correctly incorporates Twitter's requirements

--- a/src/index.scss
+++ b/src/index.scss
@@ -133,6 +133,10 @@ canvas {
 .center {
   text-align: center;
 }
+a {
+  color: inherit; /* blue colors for links too */
+  text-decoration: inherit; /* no underline */
+}
 
 .basicText {
   color: white;
@@ -166,28 +170,37 @@ body{
 
     & * > .tweet-wrap {
                   
-      //max-width:300px;
+      width: 400px;
+      max-width: 400px;
+      min-width: 400px;
+      
       background: #fff;
       margin-top: 0%;
       border-radius:20px;
       padding: 2%;
       display: inline-block;
-      max-width: fit-content;
+      border:1px solid rgb(233, 233, 233);
+      color:rgb(108, 108, 108)
 
     }
     & * > .tweet-header {
       display: flex;
       align-items:flex-start;
-      font-size:1rem;
-      max-width: fit-content;
+      font-size:0.9rem;
+      width: 360px;
+
       .avator{
           border-radius:100px;
           width:48px;
           margin-right: 15px;
       }
+      
+      
     }
+    
     & * > .tweet-header-info {
       font-weight:bold;
+      width: 297px;
       span {
           font-weight:normal;
           margin-left: 5px;
@@ -197,6 +210,23 @@ body{
           margin-top: 5px;
           
         }
+      .tweet-content {
+          display: flex;
+          justify-content:  left;
+          align-items: center;
+          width: 297px;
+          margin-left: 10px;
+          .content_img{
+            
+            max-height: 158.93px;
+            border-radius: 5%;
+          }
+          .content_vid{
+            margin-left: 60px;
+            height: 158.93px;
+            border-radius: 5%;
+          }
+        }
     }
 
     & * > .tweet-img-wrap {
@@ -205,19 +235,32 @@ body{
           max-width: 100%;
       }
     }
+
+    
     
     & * > .tweet-info-counts {
       display: flex;
       margin-left: 60px;
       margin-top: 10px;
-      font-size: 0.9rem;
+      width: 297px;
+      font-size: 0.8rem;
+      
       div {
+          width: 80px;
           display: flex;
-          margin-right: 20px;
           svg {
               margin-right: 10px;
           }
       }
+      .message {
+        width: 57px;
+        height: 20px;
+        svg{
+          width: 20px;
+          height: 20px;
+        }
+        
+    }
     } 
     
 
@@ -691,12 +734,13 @@ body{
                     
                     svg.highlight{
                       position: relative;
-                      top: 0%; left: 0%; width: 90%; height: 90%;
+                      z-index: 20;
+                      top: 0%; left: 0%; width: 110%; height: 90%;
                     }
                     
                   }
                   #first_svg{
-                    top:14%;
+                    top:10%;
                   }
 
   
@@ -1232,6 +1276,7 @@ body{
         align-items: center;
         justify-content: center;
         inset: 0;
+        background-color: white;
         .demotion_tweet_div{
           height: 100vh;
           width: 50vw;
@@ -1245,24 +1290,36 @@ body{
           .demotion_tweet_div_sticky{
             height: 100vh;
             width: 45vw;
-            background-color: #1DA1F2;
-            .tweets_div{
-              position: sticky;
-              top: 0;
-              height: 100vh;
-                
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            inset: 0;
+            .demotion_tweet_bg{
+              height: 90vh;
+              width: 100%;
+              background-color: #1DA1F2;
               display: flex;
-  
-              flex-direction: column;
-              justify-content: center;
               align-items: center;
-              .tweets_animate{
-                margin: 0.25%;
+              justify-content: center;
+              inset: 0;
+              .tweets_div{
+                position: sticky;
+                top: 0;
+                height: 100vh;
+                  
+                display: flex;
+    
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                .tweets_animate{
+                  margin: 0.25%;
+                }
+                #main{
+                  z-index: 20;
+                }
+                      
               }
-              #main{
-                z-index: 20;
-              }
-                     
             }
 
           }
