--- a/src/index.scss
+++ b/src/index.scss
@@ -140,13 +140,13 @@ a {
 
 .basicText {
   color: white;
-  font-size: 3vw;
+  font-size: 2.5vw;
   padding: auto;
   margin-top: 40%;
 }
 
 .select {
-  margin-top: 20%;
+  margin-top: 30%;
 }
 .selection_but:hover {
   background: #5189be;
@@ -170,9 +170,9 @@ body{
 
     & * > .tweet-wrap {
                   
-      width: 400px;
-      max-width: 400px;
-      min-width: 400px;
+      width: 30vw;
+     // max-width: 400px;
+     // min-width: 400px;
       
       background: #fff;
       margin-top: 0%;
@@ -187,11 +187,11 @@ body{
       display: flex;
       align-items:flex-start;
       font-size:0.9rem;
-      width: 360px;
+      width: 27vw;
 
       .avator{
           border-radius:100px;
-          width:48px;
+          width:4vw;
           margin-right: 15px;
       }
       
@@ -208,6 +208,7 @@ body{
       p {
           font-weight:normal;
           margin-top: 5px;
+          margin-bottom: 0;
           
         }
       .tweet-content {
@@ -966,6 +967,7 @@ body{
       .sketch_sec{
         height: 100vh;
         width: 100vw;
+        background-color: white;
       }
     }
 
@@ -1146,7 +1148,7 @@ body{
             width: 45vw;
             position: relative;
             max-width: 45vw;
-            font-size: 3vw;
+            font-size: 2.5vw;
             color: white;
             .text_container{
               display:flex;
@@ -1251,8 +1253,9 @@ body{
         .amplification_text{
           margin-left: 10%;
           margin-right: 10%;
-          font-size: 2.5vw;
+          font-size: 2vw;
           line-height: 3rem;
+          text-align: center;
           .non_changing{
             padding-left: 4rem;
             padding-right: 4rem;
@@ -1338,7 +1341,7 @@ body{
           .demotion_text_div_sticky{
             height: 70vh;
             width: 40vw;     
-            font-size: 2.5vw;  
+            font-size: 2vw;  
 
             
           }
@@ -1358,7 +1361,7 @@ body{
         display: flex;
         align-items: center;
         justify-content: center;
-        font-size: 3vw;
+        font-size: 2.5vw;
       }
     }
     .outro_section{
