wording changes + new annotations

--- a/src/index.scss
+++ b/src/index.scss
@@ -645,7 +645,7 @@ body{
           height: 43.75%;
           width: 90%;
           position: relative;
-          font-size: 3vmin;
+          font-size: 2.7vmin;
           color: white;
           display: flex;
           justify-content: center;
@@ -682,13 +682,21 @@ body{
         flex-direction: column;
 
         .tweet-wrap{
+        .svg_wrap_name{
+          position: absolute;
+          z-index: 20;
+          margin-top: -1%;
+          margin-left: 2%;
+          width: 10%;
+          height: 10%;
+        }
         .svg_wrap{
           position: absolute;
           z-index: 20;
-          margin-top: 1%;
-          margin-left: 3%;
-          width: 4vw;
-          height: 4vw;
+          margin-top: -40%;
+          margin-left: -1%;
+          width: 51%;
+          height: 51%;
         }
         }
       }
