--- a/src/index.scss
+++ b/src/index.scss
@@ -116,6 +116,9 @@ canvas {
   background-image: linear-gradient(#1DA1F2, #FFF);
   height: 30vh;
   width: 100vw;
+  @media only screen and (max-width: 768px) {
+    height: 10vh;
+  }
 
 }
 .tweet_intro {
@@ -345,6 +348,8 @@ body{
               display: flex;
               flex-wrap: wrap;
               justify-content: center;
+              padding: 0;
+              list-style-type: none;
               align-items: center;
 
             }
@@ -484,7 +489,11 @@ body{
       display: flex;
         align-items: center;
         justify-content: center;
+
       .padding_text{
+        @media only screen and (max-width: 768px) {
+          font-size: 5vmin;
+        }
         color: rgb(78, 78, 78);
       }
     }
@@ -500,9 +509,15 @@ body{
 
           margin-top: -0%;
           margin-left: 45%;
+          @media only screen and (max-width: 768px) {
+            margin-left: 35%;
+          }
           z-index: 21;
           img{
             max-width: 5vw;
+            @media only screen and (max-width: 768px) {
+              max-width: 14vw;
+            }
           }
         }
         .timeline_intro{
@@ -666,41 +681,66 @@ body{
       
       height: 160vh;
       width: 100vw;
+
       display: flex;
       align-items: center;
       justify-content: center;
-      inset: 0;
+
       position: relative;
+      @media only screen and (min-width: 768px) {
+        inset: 0;
+      }
+      @media only screen and (max-width: 768px) {
+        height: 160vh;
+        justify-content: start;
+        flex-direction: column;
+      }
       background-color: white;
       .highlight_text_div{
         height: 100%;
         width: 50%;
+
         display: flex;
         align-items: center;
         justify-content: right;
-        inset: 0;
         position: relative;
+        @media only screen and (min-width: 768px) {
+          inset: 0;
+        }
+        @media only screen and (max-width: 768px) {
+          position: sticky;
+          top: 0;
+          height: 50vh;
+          width: 100vw;            
+          order: 1;
+          top:0%;
+          margin-bottom: 50vh;
+          justify-content: center;
+        }
         .highligh_text_background{
           background-color: #1DA1F2;
           height: 43.75%;
           width: 90%;
+
           position: relative;
           font-size: 2.7vmin;
+          @media only screen and (max-width: 768px) {
+            height: 45vh;
+            width: 90%;
+            font-size: 3.5vmin;
+          }
           color: white;
           display: flex;
           justify-content: center;
           align-items: center;
           .highlight_text{
-
-            margin-left: 4%;
-            margin-right: 4%;
+            margin-left: 8%;
+            margin-right: 8%;
             margin-top: 10%;
             margin-bottom: 10%;
-            
-
-            
             ul{
-              list-style-type: none; /* Remove bullets */
+              padding: 0;
+              list-style-type: none;
 
               li{
                 display: inline;
@@ -712,16 +752,32 @@ body{
       .highlight_tweet_div{
         height: 100%;
         width: 50%;
+ 
         background-color: white;
         
         display: flex;
         align-items: center;
         justify-content: center;
-        inset: 0;
         position: relative;
         flex-direction: column;
+        @media only screen and (min-width: 768px) {
+          inset: 0;
+        }
+        @media only screen and (max-width: 768px) {
+          height: 50vh;
+          width: 100vw;
+          position: sticky;         
+          order: 2;
+          top:50%;
+          margin-top: -50vh;
+        }
+        
+        
 
         .tweet-wrap{
+          @media only screen and (max-width: 768px) {
+            width: 90%;
+          }
         .svg_wrap_name{
           position: absolute;
           z-index: 20;
@@ -745,21 +801,46 @@ body{
     .bargraph_section{
       
       height: 300vh;
+
       width: 100vw;
+      
       position: relative;
       background-color: white;
       display: flex;
       align-items: center;
       justify-content: center;
-      inset: 0;
+      @media only screen and (min-width: 768px) {
+        inset: 0;
+      }
+      @media only screen and (max-width: 768px) {
+        height: 200vh;
+        justify-content: start;
+        flex-direction: column;
+      }
+      
       .bars_div{
         height: 100%;
         width: 50%;
+        @media only screen and (max-width: 768px) {
+          height: 50vh;
+          width: 100%;
+          order: 2;
+          position: sticky;
+          top:50%;
+          margin-top: -50vh;
+        }
         .bars_sticky{
           height: 33.333%;
           width: 100%;
-          position: sticky;
-          top: 0;
+          @media only screen and (max-width: 768px) {
+            height: 80%;
+          }
+          @media only screen and (min-width: 768px) {
+            height: 33%;
+            position: sticky;
+            top: 0;
+          }
+          
           display: flex;
           align-items: center;
           justify-content: center;
@@ -767,12 +848,17 @@ body{
             height: 60%;
             width: 50%;
             font-size: 2.3vmin;
+            @media only screen and (max-width: 768px) {
+              height: 90%;
+              font-size: 4vmin;
+            }
             .bar1{
               flex-direction: column;
               justify-content: center;
               align-items: center;
               display: flex;
               height: 15vh;
+              
               width: 100%;
               background-color: #0b5684;
               .bar_text{
@@ -831,20 +917,43 @@ body{
         height: 100%;
         width: 50%;
         align-items: center;
-        .text_sticky{
-          height: 33.33%;
-          width: 90%;
-          position: sticky;
+        @media only screen and (max-width: 768px) {
+          height: 50vh;
+          width: 100%;
           top: 0;
+          margin-bottom: 50vh;
+          position: sticky;
+          order: 1;
+          display: flex;
+          justify-content: center;
+        }
+        .text_sticky{
+
+          @media only screen and (min-width: 768px) {
+            height: 33.33%;
+            width: 90%;
+            position: sticky;
+            top: 0;
+          }
+          @media only screen and (max-width: 768px) {
+            height: 50vh;
+            width: 90%;
+          }
+          
           display: flex;
           align-items: center;
           justify-content: center;
           .text_container_background{
             background-color: #1DA1F2;
             height: 45%;
+            font-size: 3.5vmin;
+            @media only screen and (max-width: 768px) {
+              height: 70%;
+              font-size: 5vmin;
+            }
             width: 100%;
             position: relative;
-            font-size: 3.5vmin;
+            
             color: white;
             .text_container{
               display:flex;
@@ -882,20 +991,46 @@ body{
       align-items: center;
       justify-content: center;
       position: relative;
-      inset: 0;
+      @media only screen and (max-width: 768px) {
+        flex-direction: column;
+        justify-content: start;
+      }
+      @media only screen and (min-width: 768px) {
+        flex-direction: row;
+        inset: 0;
+      }
+      
       .onboarding_text{
+
         height: 500vh;
         width: 50%;
         font-size: 3vmin;
+        @media only screen and (max-width: 768px) {
+          height: 400vh;
+          width: 100vw;
+          order: 2;
+          top:50%;
+          font-size: 5vmin;
+          margin-top: -50vh;
+        }
         .viral_text{
 
 
           .text_sticky{
+
             top: 0;
             position: sticky;
             height: 100vh;
+
             margin-left: 20%;
             margin-right: 20%;
+            @media only screen and (max-width: 768px) {
+              height: 50vh;
+              width: 80vw;
+              margin-left: 10vw;
+              margin-right: 10vw;
+              top: 50%;
+            }
             display: flex;
             align-items: center;
             justify-content: center;
@@ -915,6 +1050,9 @@ body{
         }
         .text4{
           height: 130vh;
+          @media only screen and (max-width: 768px) {
+            height: 80vh;
+          }
         }
        
         
@@ -922,12 +1060,22 @@ body{
       .onboarding_tweets{
           height: 100vh;
           width: 50vw;
+
           position: sticky;
           top:0;
           display: flex;
           align-items: center;
           justify-content: center;
-          inset: 0;
+          @media only screen and (min-width: 768px) {
+            inset: 0;
+          }
+          @media only screen and (max-width: 768px) {
+            height: 50vh;
+            width: 100vw;
+            order: 1;
+            top:0%;
+            margin-bottom: 50vh;
+          }
           background-color: white;
           .onboarding_tweet_div_sticky{
             height: 100%;
@@ -940,6 +1088,9 @@ body{
               height: 98%;
               width: 100%;
               background-color: #1DA1F2;
+              @media only screen and (max-width: 768px) {
+                height: 100%;
+              }
               display: flex;
               align-items: center;
               justify-content: center;
@@ -987,10 +1138,16 @@ body{
       height: 250vh;
       width: 100vw;
       position: relative;
+      @media only screen and (max-width: 768px) {
+        height: 250vh;
+      }
+
+      position: relative;
       .amplification_demotion{
 
         height: 50vh;
         width: 100%;
+
         display: flex;
         align-items: center;
         justify-content: center;
@@ -1001,7 +1158,15 @@ body{
           margin-left: 20%;
           margin-right: 20%;
           font-size: 3vmin;
-          line-height: 5vmin;
+          line-height: 5vmin;        
+          @media only screen and (max-width: 768px) {
+            
+            font-size: 4vmin;
+            
+            line-height: 6vmin;
+          }
+          
+
           .non_changing{
             padding-left: 6vmin;
             padding-right: 6vmin;
@@ -1024,17 +1189,32 @@ body{
         display: flex;
         align-items: center;
         justify-content: center;
-        inset: 0;
+        @media only screen and (max-width: 768px) {
+          flex-direction: column;
+          justify-content: start;
+        }
         .demotion_tweet_div{
+          
           height: 50%;
           width: 50%;
+
           position: sticky;
-          top:0;
+
           display: flex;
           align-items: center;
           justify-content: center;
-          inset: 0;
+          @media only screen and (min-width: 768px) {
+            inset: 0;
+            top:0;
+          }
           background-color: white;
+          @media only screen and (max-width: 768px) {
+            height: 50vh;
+            width: 100vw;
+            order: 2;
+            top:50%;
+            margin-top: -50vh;
+          }
           .demotion_tweet_div_sticky{
             height: 90%;
             width: 90%;
@@ -1072,13 +1252,25 @@ body{
           display: flex;
           align-items: center;
           justify-content: center;
-          inset: 0;
+          @media only screen and (min-width: 768px) {
+            inset: 0;
+          }
           background-color: white;
           color: rgb(78, 78, 78);
+          @media only screen and (max-width: 768px) {
+            height: 50vh;
+            width: 100vw;
+            order: 1;
+            margin-bottom: 50vh;
+          }
           .demotion_text_div_sticky{
             height: 70%;
             width: 80%;     
             font-size: 3.5vmin;  
+            @media only screen and (max-width: 768px) {
+
+              font-size: 5vmin;
+            }
 
             
           }
@@ -1090,6 +1282,10 @@ body{
       
       height: 140vh;
       width: 100vw;
+      position: relative;
+      @media only screen and (max-width: 768px) {
+        height: 60vh;
+      }
       background-color: white;
       color: rgb(78, 78, 78);
       display: flex;
@@ -1102,6 +1298,10 @@ body{
         justify-content: center;
         font-size: 3vmin;
         line-height: 9vmin;
+        @media only screen and (max-width: 768px) {
+          font-size: 6vmin;
+          line-height: 12vmin;
+        }
       }
       .demotion_slider_container{
         display: flex;
@@ -1109,6 +1309,10 @@ body{
         justify-content: center;
         width: 60vw;
         height: 8vw;
+        @media only screen and (max-width: 768px) {
+          width: 70vw;
+          height: 18vw;
+        }
         min-height: 5vh;
         position: relative;
         .demotion_clicker{
@@ -1204,24 +1408,39 @@ body{
 
     .counter_section{
       
-      height: 60vh;
+        height: 60vh;
         width: 100vw;
         display: flex;
         align-items: center;
         justify-content: center;
-        inset: 0;
+        @media only screen and (min-width: 768px) {
+          inset: 0;
+        }
+        
+        @media only screen and (max-width: 768px) {
+          height: 30vh;
+        }
+        
         background-color: white;
         color: rgb(78, 78, 78);
         .counter_text{
           margin-left: 10%;
           margin-right: 10%;
-          font-size: x-large;
-          line-height: 3rem;
+          font-size: 3vmin;
+          line-height: 4vmin;
+          @media only screen and (max-width: 768px) {
+            font-size: 5vmin;
+            line-height: 6vmin;
+          }
           text-align: center;
           .counter_div{
             display: inline-block;
-            font-size: 1.8rem;
-            line-height: 5rem;
+            font-size: 4vmin;
+            line-height: 12vmin;
+            @media only screen and (max-width: 768px) {
+              font-size: 5.5vmin;
+              line-height: 12vmin;
+            }
             color: #1DA1F2;
           }
           .heart_div{
@@ -1233,6 +1452,9 @@ body{
       
       height: 100vh;
       width: 100vw;
+      @media only screen and (max-width: 768px) {
+        height: 80vh;
+      }
 
       display: flex;
       align-items: center;
@@ -1247,6 +1469,11 @@ body{
         margin-right: 20%;
         color: white;
         font-size: 3vmin;
+        @media only screen and (max-width: 768px) {
+          font-size: 5vmin;
+          margin-left: 10%;
+          margin-right: 10%;
+        }
         text-align: center;
       }
     }
@@ -1267,13 +1494,22 @@ body{
       flex-direction: column;
       .outro_text{
         width: 100vw;
+        
         font-size: 3.5vmin;
+        @media only screen and (max-width: 768px) {
+          font-size: 6vmin;
+        }
+
         margin: 5%;
         text-align: center;
       }
 
       .outro_menu{
+        
         width: 30vw;
+        @media only screen and (max-width: 768px) {
+          width: 80vw;
+        }
         display: flex;
         align-items: center;
         justify-content: center;
@@ -1290,6 +1526,9 @@ body{
         .outro_menu_block{
           height: 45vh;
           width: 30vw;
+          @media only screen and (max-width: 768px) {
+            width: 80vw;
+          }
           color: #1d84c3; /* blue colors for links too */
 
           display: flex;
@@ -1298,7 +1537,12 @@ body{
           justify-content: center;
           .outro_menu_block_banner{
             font-size: 3vmin;
+
             line-height: 3vmin;
+            @media only screen and (max-width: 768px) {
+              font-size: 6vmin;
+              line-height: 6vmin;
+            }
             margin: 3%;
             text-align: center;
             text-decoration: none;
@@ -1312,14 +1556,20 @@ body{
               align-items:flex-start;
               font-size:  min(0.9vw, 1.5vh);
               width: 27vw;
+              @media only screen and (max-width: 768px) {
+                width: 72vw
+              }
               aspect-ratio: 316.86/53.38;
-              max-height: 6vh;
         
               .avator{
                   border-radius: max(4vw, 8vh);
                   margin-right: max(1vw, 2vh);
                   max-height: 8vh;
                   max-width: 4vw;
+                  @media only screen and (max-width: 768px) {
+                    max-height: 18vh;
+                    max-width: 14vw;
+                  }
                   width: auto;
                   height: auto;
                   aspect-ratio: 1/1;
@@ -1338,6 +1588,10 @@ body{
       
       height: 100vh;
       width: 100vw;
+      @media only screen and (max-width: 768px) {
+        height: 40vh;
+      }
+      
       background-color: #1DA1F2;
       color: white;
       display: flex;
@@ -1367,7 +1621,11 @@ body{
             flex-direction: column;
             .menu_button_block{
               height: 20%;
+              
               width: 60%;
+              @media only screen and (max-width: 768px) {
+                width: 80%;
+              }
               margin-top: 10%;
               margin-bottom: 10%;
               margin-left: 5%;
@@ -1404,6 +1662,10 @@ body{
                 align-items: center;
                 font-size: 3vmin;
                 text-decoration: none;
+                @media only screen and (max-width: 768px) {
+                  font-size: 2vmin;
+                }
+                
               }
             }
 
